# $Id$

2007-08-09	Anton E. Lebedevich

	* main/Flow/HttpRequest.class, main/Utils/Http/CurlHttpClient.class.php:
	HttpRequest uri -> url.

2007-08-09	Dmitry A. Lomash

	* main/Utils/CodeGenerator.class.php: setCharactersAllowed() method 
	was added.

2007-08-08	Vladimir A. Altuchov

	* core/Form/Filters/: + lower case filter

2007-08-06	Ivan Y. Khvostishkov

	* main/Utils/IO/: File Streams accept both string names and resource
	descriptors in constructor.

2007-08-06	Konstantin V. Arkhipov

	* meta/: per-class fetch strategy implemented.

2007-08-05	Denis M. Gabaidulin

	* main/Base/ImageType.class.php: getExtension() helper method was added.

2007-07-30	Ivan Y. Khvostishkov

	* main/Utils/Html: HtmlTokenizer arrived from trunk.

	* main/Utils/GenericUri.class.php: rfc3986 uri implementation.

2007-07-27	Anton E. Lebedevich

	* main/Utils/ClassUtils.class.php: abstract class support added
	to isInstanceOf.

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-07-12	Konstantin V. Arkhipov

	* 0.10.3 released.

2007-07-10	Ivan Y. Khvostishkov

	* main/Utils/IO/FileOutputStream.class.php: implemented.

	* main/Utils/Logging/: simple but useful classes for logging.

2007-07-10	Dmitry E. Pismenny

	* main/Utils/TextUtils.class.php: special handling for boolean
	values.

2007-07-09	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now ignores null values.

2007-07-07	Konstantin V. Arkhipov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
	throws WrongArgumentException.

2007-07-06	Dmitry E. Pismenny

	* main/Flow/RedirectView.class.php: special handling for boolean
	values.

2007-07-05	Anton E. Lebedevich

	* main/Utils/TidyValidator.class.php: validationErrors renamed to
	messages, added getErrorCount() and getWarningCount().

2007-07-04	Konstantin V. Arkhipov

	* core/Form/Filters/BaseFilter.class.php: now implements
	Instantiatable too.

2007-07-04	Anton E. Lebedevich
