@@ -202,6 +202,7 @@
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Logging'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Html'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Http'.PATH_SEPARATOR
+		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Math'.PATH_SEPARATOR
 		
 		.ONPHP_META_CLASSES.PATH_SEPARATOR
 	);
