@@ -1,5 +1,9 @@
 # $Id$
 
+2007-08-10	Anton E. Lebedevich
+
+	* main/Utils/Math/: big integer calculations with gmp library added.
+
 2007-08-09	Anton E. Lebedevich
 
 	* main/Flow/HttpRequest.class, main/Utils/Http/CurlHttpClient.class.php:
